# advent-of-code

./: 2.py
1/: main.ml
2/: 2.py  main.ml
2018/1/: main.ml
2018/2/: main.ml
2019/2/: int_code.ml
2019/3/: main.ml
2019/5/: int_code.ml
2019/6/: main.ml
2019/7/: amp.ml  dune
2019/8/: main.ml
2019/9/: int_code.ml  main.ml
2020/1/: 1.py
2020/11/: main.ml
2020/12/: main.ml
2020/13/: main.ml
2020/14/: main.ml
2020/4/: main.ml
2020/5/: main.ml
2020/6/: main.ml
2020/8/: main.ml
2021/1/: main.ml
2021/10/: main.ml
2021/11/: main.ml
2021/12/: main.ml
2021/13/: main.ml
2021/14/: main.ml
2021/15/: main.ml
2021/16/: main.ml
2021/18/: main.ml
2021/2/: main.ml
2021/7/: main.ml
2021/8/: main.ml
2022/1/: main.ml
3/: main.ml
6/: main.ml
8/: main.ml
ocaml/2018/: README.md
ocaml/2019/1/: main.ml
ocaml/2019/2/: main.ml
ocaml/2019/4/: main.ml
ocaml/2019/5/: main.ml
ocaml/2019/7/: int_code.ml  main.ml
ocaml/2019/9/: int_code.ml
ocaml/2020/: README.md
ocaml/2020/1/: main.ml
ocaml/2020/10/: main.ml
ocaml/2020/11/: main.ml
ocaml/2020/13/: dune
ocaml/2020/15/: dune  main.ml
ocaml/2020/16/: dune  main.ml
ocaml/2020/2/: dune
ocaml/2020/7/: dune  main.ml
ocaml/2020/9/: main.ml
ocaml/2021/1/: main.ml
ocaml/2021/12/: main.ml
ocaml/2021/13/: main.ml
ocaml/2021/14/: main.ml
ocaml/2021/17/: main.ml
ocaml/2021/18/: main.ml
ocaml/2021/2/: main.ml
ocaml/2021/3/: main.ml
ocaml/2021/4/: main.ml
ocaml/2021/5/: main.ml
ocaml/2021/6/: main.ml
ocaml/2021/9/: main.ml
ocaml/2023/: README.md
ocaml/2023/1/: dune  main.ml
ocaml/2023/2/: dune  main.ml
ocaml/2023/3/: main.ml
ocaml/2023/4/: main.ml
ocaml/2023/5/: dune  main.ml
ocaml/2023/6/: main.ml
ocaml/2023/7/: main.ml
ocaml/2023/8/: main.ml
ocaml/2023/9/: dune  main.ml
rust/2015/: Cargo.toml
rust/2015/src/1/: day_1.rs
rust/2015/src/2/: day_2.rs
rust/2015/src/3/: day_3.rs
rust/2015/src/4/: day_4.rs
rust/2015/src/5/: day_5.rs
rust/2015/src/6/: day_6.rs
rust/2015/src/7/: day_7.rs  grammar.pest
rust/2015/src/8/: day_8.rs  hest.py
rust/2019/: Cargo.toml
rust/2019/10/: day_10.rs
rust/2021/: Cargo.toml
rust/2021/src/1/: day_1.rs
rust/2022/: Cargo.toml
rust/2022/src/1/: day_1.rs
rust/2022/src/10/: day_10.rs
rust/2022/src/11/: day_11.rs
rust/2022/src/12/: day_12.rs
rust/2022/src/13/: day_13.rs
rust/2022/src/14/: day_14.rs
rust/2022/src/2/: day_2.rs
rust/2022/src/3/: day_3.rs
rust/2022/src/4/: day_4.rs
rust/2022/src/5/: day_5.rs
rust/2022/src/6/: day_6.rs
rust/2022/src/7/: day_7.rs
rust/2022/src/8/: day_8.rs
rust/2022/src/9/: day_9.rs
rust/2023/: Cargo.toml
rust/2023/src/1/: day_1.rs
rust/2024/: Cargo.toml
rust/2024/1/: day_1.rs
rust/2024/2/: day_2.rs
rust/2024/3/: day_3.rs
rust/2024/4/: day_4.rs
rust/2024/5/: day_5.rs
rust/2024/6/: day_6.rs
rust/2024/7/: day_7.rs
rust/2024/8/: day_8.rs
rust/2024/9/: day_9.rs
rust/2025/: Cargo.toml
rust/2025/1/: day_1.rs
