[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["Anders Hellerup Madsen <ahem@github.com>"]
edition = "2018"

[[bin]]
name = "day_1"
path = "src/1/day_1.rs"

[[bin]]
name = "day_2"
path = "src/2/day_2.rs"

[[bin]]
name = "day_3"
path = "src/3/day_3.rs"

[[bin]]
name = "day_4"
path = "src/4/day_4.rs"

[dependencies]
md5 = "0.7.0"
regex = "1.4.5"
