[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["Anders Hellerup Madsen <ahem@github.com>"]
edition = "2018"

[[bin]]
name = "day_1"
path = "src/1/day_1.rs"

[[bin]]
name = "day_2"
path = "src/2/day_2.rs"

[[bin]]
name = "day_3"
path = "src/3/day_3.rs"

[[bin]]
name = "day_4"
path = "src/4/day_4.rs"

[[bin]]
name = "day_5"
path = "src/5/day_5.rs"

[dependencies]
fancy-regex = "0.5.0"
lazy_static = "1.4.0"
md5 = "0.7.0"
regex = "1.4.5"
