[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"

[[bin]]
name = "day_1"
path = "src/1/day_1.rs"

[[bin]]
name = "day_2"
path = "src/2/day_2.rs"

[[bin]]
name = "day_3"
path = "src/3/day_3.rs"

[[bin]]
name = "day_4"
path = "src/4/day_4.rs"
