[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
lazy_static = "1.4.0"
nom = "7.1.1"
num-bigint = "0.4.3"
regex = "1.7.0"

[[bin]]
name = "day_1"
path = "src/1/day_1.rs"

[[bin]]
name = "day_2"
path = "src/2/day_2.rs"

[[bin]]
name = "day_3"
path = "src/3/day_3.rs"

[[bin]]
name = "day_4"
path = "src/4/day_4.rs"

[[bin]]
name = "day_5"
path = "src/5/day_5.rs"

[[bin]]
name = "day_6"
path = "src/6/day_6.rs"

[[bin]]
name = "day_7"
path = "src/7/day_7.rs"

[[bin]]
name = "day_8"
path = "src/8/day_8.rs"

[[bin]]
name = "day_9"
path = "src/9/day_9.rs"

[[bin]]
name = "day_10"
path = "src/10/day_10.rs"

[[bin]]
name = "day_11"
path = "src/11/day_11.rs"
