[package]
name = "advent_of_code_2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
itertools = "0.13.0"
regex = "1.11.1"

[[bin]]
name = "day_1"
path = "1/day_1.rs"

[[bin]]
name = "day_2"
path = "2/day_2.rs"

[[bin]]
name = "day_3"
path = "3/day_3.rs"

[[bin]]
name = "day_4"
path = "4/day_4.rs"

[[bin]]
name = "day_5"
path = "5/day_5.rs"

[[bin]]
name = "day_6"
path = "6/day_6.rs"

[[bin]]
name = "day_7"
path = "7/day_7.rs"
